--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.0.9",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -31,7 +32,8 @@
     "password-hash-and-salt": "^0.1.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
